# stdutau

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/stdutau/: CMakeLists.txt  genonsettings.cpp  genonsettings.h  note.cpp  note.h  otoini.cpp  otoini.h  pluginfile.cpp  pluginfile.h  prefixmap.cpp  prefixmap.h  stdutauConfig.cmake.in  synth.cpp  synth.h  ustfile.cpp  ustfile.h  utaconst.h  utafilebase.cpp  utafilebase.h  utaglobal.h  utautil.cpp  utautils.h
src/stdutau/private/: usthelper.cpp  usthelper_p.h
tests/: CMakeLists.txt
tests/parse/: CMakeLists.txt  main.cpp
